# pyTUGA

./: .gitignore  README.md  guga_ab_drt.ipynb  guga_drt.ipynb  guga_graph.py  jacobi.ipynb  pyproject.toml  quimb_tutorial.ipynb  setup.cfg  setup.py
.mypy_cache/3.9/: _ast.data.json  _ast.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _warnings.data.json  _warnings.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  copy.data.json  copy.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  functools.data.json  functools.meta.json  genericpath.data.json  genericpath.meta.json  inspect.data.json  inspect.meta.json  io.data.json  io.meta.json  itertools.data.json  itertools.meta.json  math.data.json  math.meta.json  mmap.data.json  mmap.meta.json  numbers.data.json  numbers.meta.json  (+44 more)
.mypy_cache/3.9/_typeshed/: __init__.data.json  __init__.meta.json
.mypy_cache/3.9/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.9/distutils/: __init__.data.json  __init__.meta.json
.mypy_cache/3.9/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json
.mypy_cache/3.9/numpy/: __init__.data.json  __init__.meta.json  char.data.json  (+11 more)
examples/: guga_drt.ipynb  quimb_tutorial.ipynb
pyTUGA.egg-info/: requires.txt  top_level.txt
pytuga/:   angular_momentum.py  __init__.py  angular_momentum.ipynb  guga_graph.py
tests/: README.md
(+130 files in other folders)
