[metadata]
name = pyTUGA
description = Unitary group tensor network
long_description = file: README.md
long_description_content_type = text/markdown
author = Nathan Fitzpatick
author_email = nfitzpatrickchem@gmail.com
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering/Quantum-Computing
license = Proprietary License
url = https://github.com/NathanCQC/pyTUGA

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    numpy~=1.2
    scipy~=1.5
    pandas~=1.1
    pytket==0.12
    h5py==3.1.0
    quimb

[options.extras_require]
dev =
    pytest==6.2.2
    pytest-html==2.1.1
    pytest-pythonpath==0.7.3
docs =
    sphinx==3.5.3
    sphinx-rtd-theme==0.5.1
    recommonmark~=0.7

[tool:pytest]
minversion = 6.0
addopts = -rxX --disable-warnings -v -k 'not slow' -q
testpaths = tests
python_paths = .
cache_dir = .pytest_cache
